--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
+    "googleapis": "^154.1.0",
     "next": "15.4.3",
     "openai": "^5.11.0",
     "react": "19.1.0",
