--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "googleapis": "^154.0.0",
     "marked": "^16.1.2",
     "next": "^15.4.2-canary.29",
+    "nprogress": "^0.2.0",
     "openai": "^5.10.2",
     "react": "19.1.0",
     "react-dom": "19.1.0"
@@ -23,6 +24,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/nprogress": "^0.2.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
